--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,37 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
+html {
+  scroll-behavior: smooth;
+  width: 100%;
   overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'book', Helvetica Neue, Helvetica, Arial, sans-serif;
+  background-color: #f8f9fa;
+  scroll-behavior: smooth;
+  width: 100%;
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
+  height: 100%;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.container-fluid {
+  max-width: 1600px;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .dropdown-menu  {
+    margin-top: 0;
+  }
+  .dropdown-toggle::after {
+    display: none !important;
+  }
+  .dropdown-item {
+    padding: 13px 16px;
+    border-bottom: 1px solid #d3d3d3;
   }
 }
+
